src/scss/main.scss
/* ... */
.subsection {
  padding-bottom: 0.2rem;

  &--cheat-sheets {
    pre {
      padding: 0.01em 0.75em;
    }

    p, code {
      font-size: $font-size-sm;
    }

    p {
      margin-bottom: 0.01rem;
    }

    h5 {
      margin-top: 0.01rem;
    }

    .code-toolbar {
      margin-bottom: 0.01rem;
    }
  }

  &__header {
    padding: 1rem;
    background-color: $gray-600;
    color: $white;
    margin-bottom: 2rem;
    @extend .cutoff;

    h2 {
      font-size: $font-size-sm;
      font-weight: 600;
      letter-spacing: 1.5px;
      text-transform: uppercase;
    }

    h3 {
      margin-bottom: 0;
    }
  }

  &__project {
    margin-top: 4rem;
  }
}

/**
** Extended Bootstrap Components
**/
.navbar {
  z-index: 999;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;

  .megamenu {
    background: $dark-blue;
    border: none;

    &__view-all {
      margin-bottom: 1rem;

      a {
        color: $white;

        &:hover {
          text-decoration: none;
        }
      }
    }
  }

  h1,h2,h3,h4,h5,
  .nav-link {
    color: $white;
  }

  h2,h3,h4,h5 {
    font-weight: normal;
    font-family: $font-family-sans-serif;
    margin-top: 0.5rem;
  }

  .nav-link {
    padding-left: 0;

    span {
      font-size: 0.65em;
      text-transform: uppercase;
      letter-spacing: 1px;
      display: block;
    }
  }
  
  &--main-menu-mobile {
    justify-content: flex-start;
    align-items: center;

    .navbar-brand {
      margin: 0 0 0 1rem;
    }
  }

  &--main-menu {
    @include media-breakpoint-down(md) { // Drawer menu on smaller devices
      visibility: hidden;
      transform: translateX(-100%);
      border-radius: 0; 
      display: block;
      position: fixed;
      top: 0; left:0;
      height: 100%;
      width: 80%;
      overflow-y: scroll;
      overflow-x: hidden;
      transition: visibility .2s ease-in-out, transform .2s ease-in-out;
      padding: 0;

      &.show {
        visibility: visible;
        transform: translateX(0);
      }

      .btn-close {
        font-size: 2.25em;
        color: $white;
        position: absolute;
        right: 0;
      }

      .navbar-brand {
        margin: 1rem 1.25rem;
      }

      .has-megamenu.show {
        background: $dark-blue;
      }

      .dropdown-toggle::after {
        position: absolute;
        right: 2rem;
        top: 1.5rem;
      }

      .navbar-nav > .nav-item {
        .nav-link {
          padding-top: 0.75rem;
          padding-bottom: 0.75rem;
        }

        &:not(:first-of-type) {
          .nav-link {
            &::after {
              content: '';
              position: absolute;
              height: 1px;
              width: calc(100% - 2.5rem);
              background: $dark-blue;
              transform: translateY(-50%);
              left: 1.25rem;
              top: 0;
            }
          }
        }
      }

      h1,h2,h3,h4,h5 {
        font-size: 24px;
      }

      .nav-link {
        font-size: 20px;
        padding-left: 1.25rem;
        padding-right: 1.25rem;
        position: relative;
      }

      .megamenu {
        margin-left: 1rem;
        max-height: 60vh;
        overflow: scroll;

        [class*="col-"] {
          padding-left: 1.25rem;
          padding-right: 0;

          &:last-of-type {
            margin-bottom: 2rem;
          }

          + [class*="col-"] {
            margin-top: 1rem;
          }
        }
      }
    }

    @include media-breakpoint-up(lg) { // Mega menu on large devices
      .has-megamenu {
        position: static !important;
      }

      .megamenu {
        left: 0; 
        width: 100%; 
        margin: 0;
        padding: 2rem 0 4rem;

        .row {
          width: 100%;
        }
      }
    }
  }
}

.screen-overlay {
  height: 100%;
  z-index: 100;
  position: fixed;
  top: 0;
  left: 0;
  opacity:0;
  visibility:hidden;
  background-color: rgba(34, 34, 34, 0.6);
  transition:opacity .2s linear, visibility .1s, width 1s ease-in;

  &.show {
    transition:opacity .5s ease, width 0s;
    opacity:1;
    width:100%;
    visibility:visible;
  }
}

.navbar {
  z-index: 105;

  &-brand {
    font-weight: $font-weight-bold;
    font-family: $headings-font-family;
  }
}

.navbar-brand {
  h1 {
    margin: 0 !important;
    font-size: $navbar-brand-font-size;
  }
}

.nav-tabs-wrapper {
  overflow: scroll;
  position: fixed;
  width: 100%;
  top: 52px;
  background: $white;
  z-index: 99;
  box-shadow: 0 3px 3px rgba(0,0,0,0.05);

  .nav-tabs {
    position: relative;
    z-index: 997;
    
    @include media-breakpoint-down(sm) {
      min-width: 700px;
      justify-content: space-between;
    }
    
    @include media-breakpoint-up(md) {
      width: 75%;
    }

    @include media-breakpoint-up(lg) {
      width: 83.33333%;
    }
  }

  @include media-breakpoint-up(lg) {
    top: 56px;
  }
}

.tab-content {
  @include media-breakpoint-up(md) {
    padding-top: 40px;
  }
}

.embed-responsive {
  max-width: 800px;
  margin: 1.5rem 0;

  @include media-breakpoint-up(md) {
    margin: 3rem 0;
  }
}

.input {
  &--narrow {
    padding: 0.65rem;
    font-size: $font-size-sm;
    height: 37px;
  }
}
pre {
  background: $gray-900; 
}


/**
** Prism JS overrides
**/

.code-toolbar {
  margin-bottom: 1rem;
}

div.code-toolbar>.toolbar {
  top: 0.75rem;
  right: 1rem;
}
div.code-toolbar>.toolbar a, div.code-toolbar>.toolbar button, div.code-toolbar>.toolbar span {
  color: white;
  padding: 0.15rem 0.5rem 0.25rem;
  transition: 0.1s ease-in-out all;
}

div.code-toolbar>.toolbar a:hover, div.code-toolbar>.toolbar a:focus, div.code-toolbar>.toolbar button:hover, div.code-toolbar>.toolbar button:focus, div.code-toolbar>.toolbar span:hover, div.code-toolbar>.toolbar span:focus {
  color: white;
  background: $gray-900;
}
/* ... */

